# gastric-gland-analyser

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/analysis_app/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  gastric-gland-analyser-config.cmake
gastric_gland_analyser/: __init__.py  _population_factory.py  analyser.py  cell.py  population.py  simulation_connection.py
gastric_gland_analyser/analyser/: _abstract_analyser.py  foveolar_height_tracker.py  neck_height_tracker.py
gastric_gland_analyser/analyser/helpers/: _calculate_foveolar_height.py  _calculate_neck_height.py
gastric_gland_analyser/analysers/: __init__.py  cell_count_tracker.py  foveolar_height_tracker.py  label_tracker.py  neck_cell_count_tracker.py  neck_height_tracker.py  smallest_cell_tracker.py  smallest_neck_cell_tracker.py
gastric_gland_analyser/analysers/helpers/: _calculate_foveolar_height.py  _calculate_neck_height.py  _count_cells.py  _find_smallest_cell.py
gastric_gland_analyser/data_readers/: __init__.py  _abstract_cell_data_reader.py  boundary_nodes.py  cell_ages.py  cell_ancestors.py  cell_areas.py  cell_location_indices.py  cell_proliferative_types.py  cell_types.py  node_locations.py
scripts/: store_cpp_analysis.py
src/: CMakeLists.txt  analyser.cpp  analyser.hpp  population_factory.cpp  population_factory.hpp  simulation_connection.cpp  simulation_connection.hpp
src/data_readers/: abstract_data_reader.cpp  abstract_data_reader.hpp  boundary_nodes_reader.cpp  boundary_nodes_reader.hpp  cell_ages_reader.cpp  cell_ages_reader.hpp  cell_ancestors_reader.cpp  cell_ancestors_reader.hpp  cell_areas_reader.cpp  cell_areas_reader.hpp  cell_location_indices_reader.cpp  cell_location_indices_reader.hpp  cell_types_reader.cpp  cell_types_reader.hpp  node_locations_reader.cpp  node_locations_reader.hpp  proliferative_cell_types_reader.cpp  proliferative_cell_types_reader.hpp
src/dataclasses/: cell.hpp  population.cpp  population.hpp  proliferative_cell_types.hpp
src/trackers/: abstract_tracker.cpp  abstract_tracker.hpp  cell_area_tracker.cpp  cell_area_tracker.hpp  cell_count_tracker.cpp  cell_count_tracker.hpp  distribution_helper.cpp  distribution_helper.hpp  foveolar_cell_area_tracker.cpp  foveolar_cell_area_tracker.hpp  foveolar_cell_count_tracker.cpp  foveolar_cell_count_tracker.hpp  foveolar_height_tracker.cpp  foveolar_height_tracker.hpp  neck_cell_area_tracker.cpp  neck_cell_area_tracker.hpp  neck_cell_count_tracker.cpp  neck_cell_count_tracker.hpp  neck_height_tracker.cpp  neck_height_tracker.hpp  smallest_cell_area_tracker.cpp  smallest_cell_area_tracker.hpp  smallest_neck_cell_area_tracker.cpp  smallest_neck_cell_area_tracker.hpp
